--- a/Employers.html
+++ b/Employers.html
@@ -392,7 +392,7 @@ function mmData(o) { mmDataLayer.push(o); }
     <li><a class="nav-link scrollto" href="https://rahullrajesh.github.io/webtest-update-1/#team">Our Team</a></li>
     <li><a href="https://orchvate.com/blog.html"> Our Blog</a></li>
     
-    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+    <li><a class="nav-link scrollto" href="https://rahullrajesh.github.io/webtest-update-1/#contact">Contact</a></li>
     <li><a class="getstarted scrollto" href="https://rahullrajesh.github.io/webtest-update-1/#Registration">Register</a></li>
   </ul>
   <i class="bi bi-list mobile-nav-toggle"></i>
