--- a/Neurodivergents.html
+++ b/Neurodivergents.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Orchvate - Our Services</title>
+  <title>Our Services</title>
     <meta content="" name="description" />
 
     <meta content="" name="keywords" />
@@ -341,7 +341,7 @@ function mmData(o) { mmDataLayer.push(o); }
       <li><a class="nav-link scrollto" href="https://rahullrajesh.github.io/webtest-update-1/#team">Our Team</a></li>
       <li><a href="https://orchvate.com/blog.html"> Our Blog</a></li>
       
-      <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+      <li><a class="nav-link scrollto" href="https://rahullrajesh.github.io/webtest-update-1/#contact">Contact</a></li>
       <li><a class="getstarted scrollto" href="https://rahullrajesh.github.io/webtest-update-1/#Registration">Register</a></li>
     </ul>
     <i class="bi bi-list mobile-nav-toggle"></i>
@@ -430,7 +430,7 @@ function mmData(o) { mmDataLayer.push(o); }
                     <div class="col-md-4 text-center"data-aos="fade-up"
                     data-aos-delay="200">
                       
-                      <a class="buttonregister" href="https://rahullrajesh.github.io/webtest-update-1/#Registration">Register</a>
+                      <a class="buttonregister" href="./Neurodivergent registration.html" >Register</a>
                       <p>Click here to  Register <i class="bi bi-hand-index"></i> </p>
                     </div>
                     <div class="col-md-4">
